--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "bootstrap": "^4.1.3",
     "jquery": "^3.3.1",
+    "node-sass": "^4.9.2",
     "popper.js": "^1.14.3",
     "sass-loader": "^7.0.3",
     "vue": "^2.5.2",
